Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -201,7 +201,7 @@
       "type": "series",
       "name": "Doctor Elise: The Royal Lady with the Lamp",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162144-T0y7XyTFhSYJ.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Medicine/Female Protagonist/Isekai/Royal Affairs/Shoujo/Arranged Marriage/Work/Age Regression/Ojou-sama/Heterosexual/Magic/Tanned Skin/Foreign/Marriage/Swordplay/Anachronism/CGI/Male Harem\nMaking up for her sins in a past life as the evil princess Elise, Aoi Takamoto dedicates her life to saving people as a doctor. But a fatal accident cuts her atonement short and suddenly she’s back to her previous life, 10 years before her death! Will her foresight and medical brilliance help her change her past ways and heal an ailing empire, or is fate doomed to repeat itself?\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Medicine/Female Protagonist/Isekai/Royal Affairs/Shoujo/Work/Arranged Marriage/Magic/Ojou-sama/Age Regression/Heterosexual/Tanned Skin/Foreign/Marriage/Swordplay/Anachronism/CGI/Male Harem\nMaking up for her sins in a past life as the evil princess Elise, Aoi Takamoto dedicates her life to saving people as a doctor. But a fatal accident cuts her atonement short and suddenly she’s back to her previous life, 10 years before her death! Will her foresight and medical brilliance help her change her past ways and heal an ailing empire, or is fate doomed to repeat itself?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt30643971",
