Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -73,7 +73,7 @@
     {
       "id": "tt31152166",
       "type": "movie",
-      "name": "Kizumonogatari: Koyomi Vamp",
+      "name": "KIZUMONOGATARI -Koyomi Vamp-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181970-dqNqPsJcBk5I.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt31152166"
