Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "'Tis Time for \"Torture,\" Princess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166522-pUnBSDFzs9DD.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Female Protagonist/Episodic/Cute Girls Doing Cute Things/Iyashikei/Food/Demons/Surreal Comedy/Torture/Slapstick/Monster Girl/Prison/Parody/Animals/Vampire/Tsundere/Gyaru/Ice Skating/Shounen/Tanned Skin\nAs the war between the Imperial Army and Hellhorde rages on, the Princess, despite being armed with her mythical sword Excalibur, is captured and imprisoned. What kind of torture does she face at the hands of the chief demon interrogator? Fluffy fresh-baked toast! Hot, steaming ramen! Oh, the humanity! Can the Princess withstand these tormenting treats and keep her kingdom’s secrets safe?<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Female Protagonist/Episodic/Cute Girls Doing Cute Things/Iyashikei/Food/Demons/Surreal Comedy/Torture/Primarily Female Cast/Slapstick/Monster Girl/Prison/Parody/Animals/Vampire/Tsundere/Gyaru/Ice Skating/Shounen/Tanned Skin\nAs the war between the Imperial Army and Hellhorde rages on, the Princess, despite being armed with her mythical sword Excalibur, is captured and imprisoned. What kind of torture does she face at the hands of the chief demon interrogator? Fluffy fresh-baked toast! Hot, steaming ramen! Oh, the humanity! Can the Princess withstand these tormenting treats and keep her kingdom’s secrets safe?<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt30325850",
@@ -260,18 +260,18 @@
       "description": "Genres: Action, Drama, Thriller\nTags:Triads/Amnesia/Foreign/Crime/Female Protagonist/Drugs\nSequel to <i>GREAT PRETENDER</i>.<br><br>\n\nPresumed dead, master con artist and recovering amnesiac Dorothy is discovered by Shanghai Longu-bang, a mob who wants payback for her conning them. With no memories and nowhere to go, she must rely on a local crime underboss to elude Taipei’s criminal underworld all while tracking down leads to her mysterious past.<br><br>\n\n(Source: Crunchyroll)<br><br>\n\n<i>Note: The movie was screened early in select American theaters on January 9, 2024.</i>"
     },
     {
-      "id": "tt30691068",
-      "type": "series",
-      "name": "The Demon Prince of Momochi House",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167146-H6Kpldjzcxic.jpg",
-      "description": "Genres: Romance, Supernatural\nTags:Youkai/Female Protagonist/Shoujo/Primarily Male Cast/Orphan/Male Harem/Urban Fantasy/Kemonomimi/Nekomimi\nHimari’s 16th birthday will be one she never forgets. Unexpectedly, she receives a will detailing her inheritance of a mysterious estate: the Momochi House. She arrives only to discover that the home was built on the cusp between the human world and the spiritual realm. There, she encounters Yukari, Ise, and a peculiar boy named Aoi, who seems to be concealing a shadowy secret.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt19869172",
       "type": "series",
       "name": "The Shape of My Happiness",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167486-EVz4sqKjf7W4.jpg",
       "description": "Genres: Drama, Romance, Supernatural\nTags:Female Protagonist/Heterosexual/Shoujo/Male Protagonist/Marriage/Kuudere/Primarily Adult Cast\nAn unaired episode bundled with the special edition of the 8th<i>Watashi no Shiawase na Kekkon</i> light novel volume.\n<br><br>\nMiyo's chance to demonstrate what she has learned comes at her first social gathering with her fiancé. Kiyoka introduces her to a distinguished gentleman. \n<br><br>\n(Source: Netflix)"
+    },
+    {
+      "id": "tt30691068",
+      "type": "series",
+      "name": "The Demon Prince of Momochi House",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167146-H6Kpldjzcxic.jpg",
+      "description": "Genres: Romance, Supernatural\nTags:Youkai/Female Protagonist/Shoujo/Primarily Male Cast/Orphan/Male Harem/Urban Fantasy/Kemonomimi/Nekomimi\nHimari’s 16th birthday will be one she never forgets. Unexpectedly, she receives a will detailing her inheritance of a mysterious estate: the Momochi House. She arrives only to discover that the home was built on the cusp between the human world and the spiritual realm. There, she encounters Yukari, Ise, and a peculiar boy named Aoi, who seems to be concealing a shadowy secret.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt25275610",
