Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt31257225"
       },
-      "description": "Genres: Drama, Music, Romance\nTags:Boys' Love/Male Protagonist/Primarily Male Cast/LGBTQ+ Themes/Band/Primarily Teen Cast/Urban/Rock Music/Kuudere\nSequel to the first <i>Given Movie</i>."
+      "description": "Genres: Drama, Music, Romance\nTags:Boys' Love/Male Protagonist/Primarily Male Cast/LGBTQ+ Themes/Band/Primarily Teen Cast/Urban/Rock Music/Kuudere\nSequel to the first <i>Given Movie</i>.<br>\n<br>\nAfter Ritsuka Uenoyama hears Mafuyu Sato sing, he invites Mafuyu to join his band. Given auditions for a festival in Shibuya and falls short, though they continue to attract attention. At the same time, Mafuyu’s childhood friends, Shizusumi Yagi and Hiiragi Kashima, prepare to make their debut as the band “syh.” When they lose a guitarist, Hiiragi asks Ritsuka to join them for their big show.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32235713",
