--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -145,7 +145,7 @@
       "type": "series",
       "name": "The Foolish Angel Dances with the Devil",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx164244-cOP5eMVqVIew.jpg",
-      "description": "Genres: Comedy, Romance, Supernatural\nTags:Demons/Angels/Female Protagonist/Male Protagonist/Heterosexual/School/Seinen/Urban Fantasy\nDetermined to protect his demon world from heavenly angels, demon Masatora Akutsu heads to earth in search of a charismatic human to rally his kin. Masquerading as a high schooler for his recruitment mission, he’s captivated by the lovely Lily Amane. But he’s in for a wild celestial surprise, because she’s his archnemesis—an angel—and she’s set on reforming his demonic ways!<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Supernatural\nTags:Demons/Angels/Female Protagonist/Male Protagonist/Heterosexual/School/Seinen/Urban Fantasy/Tsundere\nDetermined to protect his demon world from heavenly angels, demon Masatora Akutsu heads to earth in search of a charismatic human to rally his kin. Masquerading as a high schooler for his recruitment mission, he’s captivated by the lovely Lily Amane. But he’s in for a wild celestial surprise, because she’s his archnemesis—an angel—and she’s set on reforming his demonic ways!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt29510641",
@@ -236,7 +236,7 @@
       "type": "series",
       "name": "Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167087-3ZM69QhaQ3FE.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life, Supernatural\nTags:Boys' Love/Male Protagonist/Super Power/Work/LGBTQ+ Themes/Office/Primarily Adult Cast/Cute Boys Doing Cute Things/Primarily Male Cast/Josei/Bisexual/Magic/Urban/Urban Fantasy/Chibi/Unrequited Love/Dancing/Writing/Office Lady\nAdachi's 30th birthday as a virgin came with the oddest gift—the ability to read the mind of anyone he touches. Pondering what to do with this mysterious power, he gets a lead when he accidentally reads his colleague Kurosawa's mind. Turns out the handsome hotshot of the sales team has got a thing for him! How will Adachi respond to overhearing these affectionate thoughts?<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life, Supernatural\nTags:Boys' Love/Male Protagonist/Super Power/Work/LGBTQ+ Themes/Office/Cute Boys Doing Cute Things/Primarily Adult Cast/Primarily Male Cast/Bisexual/Josei/Magic/Urban/Urban Fantasy/Dancing/Chibi/Unrequited Love/Writing/Office Lady\nAdachi's 30th birthday as a virgin came with the oddest gift—the ability to read the mind of anyone he touches. Pondering what to do with this mysterious power, he gets a lead when he accidentally reads his colleague Kurosawa's mind. Turns out the handsome hotshot of the sales team has got a thing for him! How will Adachi respond to overhearing these affectionate thoughts?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt30475122",
