Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -264,7 +264,7 @@
       "type": "series",
       "name": "The Shape of My Happiness",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167486-EVz4sqKjf7W4.jpg",
-      "description": "Genres: Drama, Romance, Supernatural\nTags:Female Protagonist/Heterosexual/Shoujo/Male Protagonist/Marriage/Kuudere/Primarily Adult Cast\nAn unaired episode bundled with the special edition of the 8th<i>Watashi no Shiawase na Kekkon</i> light novel volume.\n<br><br>\nMiyo's chance to demonstrate what she has learned comes at her first social gathering with her fiancé. Kiyoka introduces her to a distinguished gentleman. \n<br><br>\n(Source: Netflix)"
+      "description": "Genres: Drama, Romance, Supernatural\nTags:Heterosexual/Female Protagonist/Shoujo/Kuudere/Male Protagonist/Marriage/Primarily Adult Cast\nAn unaired episode bundled with the special edition of the 8th<i>Watashi no Shiawase na Kekkon</i> light novel volume.\n<br><br>\nMiyo's chance to demonstrate what she has learned comes at her first social gathering with her fiancé. Kiyoka introduces her to a distinguished gentleman. \n<br><br>\n(Source: Netflix)"
     },
     {
       "id": "tt30691068",
