--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt28813303"
       },
-      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Seinen/Female Protagonist/Urban/Politics/Dystopian/Military/Coming of Age/Philosophy/Aliens/Primarily Female Cast/Language Barrier/Surreal Comedy/School\nThe first film of the <i>Dead Dead Demon's Dededededestruction</i> duology.\n<br><br>\nThe Japan Self-Defense Forces are still looking for a way to combat the alien threat, but so far conventional weapons have had no effect. Maybe it’s time to try something unconventional.<br>\n<br>\nMeanwhile, Kadode Koyama and her best friend avidly track the aliens’ movements on social media and less enthusiastically study for college entrance exams. When the end of the world looms overhead, you learn to take things one step at a time.<br>\n<br>\n(Source: Viz Media)"
+      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Seinen/Female Protagonist/Urban/Politics/Military/Coming of Age/Philosophy/Dystopian/Aliens/Primarily Female Cast/Language Barrier/Surreal Comedy/School\nThe first film of the <i>Dead Dead Demon's Dededededestruction</i> duology.\n<br><br>\nThe Japan Self-Defense Forces are still looking for a way to combat the alien threat, but so far conventional weapons have had no effect. Maybe it’s time to try something unconventional.<br>\n<br>\nMeanwhile, Kadode Koyama and her best friend avidly track the aliens’ movements on social media and less enthusiastically study for college entrance exams. When the end of the world looms overhead, you learn to take things one step at a time.<br>\n<br>\n(Source: Viz Media)"
     },
     {
       "id": "tt31257225",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32235713"
       },
-      "description": "Genres: Comedy, Drama, Music, Supernatural\nTags:Bar/Idol/Work/Urban/Seinen/Primarily Adult Cast/Found Family/Female Protagonist/Male Protagonist/Hip-hop Music\nCompilation film of <i>Ya Boy Kongming!</i> The film features new footage in some of Eiko's performances.<br><br>\nThe music industry becomes a battlefield when ancient strategist Kongming is transported from historical China to modern Japan. He’ll use military tactics to turn his new friend Eiko into a music star, and together they’ll take the party hotspot of Shibuya by storm! The story is a clever take (and smart twist) on fish-out-of-water and person-out-of-time themes with out-of-this-world results for <i>Ya Boy Kongming!</i><br><br>\n\n(Source: HIDIVE) "
+      "description": "Genres: Comedy, Drama, Music, Supernatural\nTags:Hip-hop Music/Bar/Idol/Urban/Found Family/Primarily Adult Cast/Work/Seinen/Female Protagonist/Male Protagonist\nCompilation film of <i>Ya Boy Kongming!</i> The film features new footage in some of Eiko's performances.<br><br>\nThe music industry becomes a battlefield when ancient strategist Kongming is transported from historical China to modern Japan. He’ll use military tactics to turn his new friend Eiko into a music star, and together they’ll take the party hotspot of Shibuya by storm! The story is a clever take (and smart twist) on fish-out-of-water and person-out-of-time themes with out-of-this-world results for <i>Ya Boy Kongming!</i><br><br>\n\n(Source: HIDIVE) "
     },
     {
       "id": "kitsu:47834",
@@ -48,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "kitsu:47834"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Primarily Female Cast/Female Protagonist/Family Life/Yuri/Cute Girls Doing Cute Things/School/LGBTQ+ Themes/Primarily Teen Cast/Episodic/Tsundere/Slapstick/Primarily Child Cast\nA spin-off of the <i>Yuru Yuri</i> series featuring Sakurako and her sisters. The first film of the <i>Oomuro-ke</i> duology.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Primarily Female Cast/Female Protagonist/School/Family Life/Cute Girls Doing Cute Things/Yuri/Urban/Slapstick/Tsundere/Primarily Teen Cast/Episodic/Primarily Child Cast/LGBTQ+ Themes\nA spin-off of the <i>Yuru Yuri</i> series featuring Sakurako and her sisters. The first film of the <i>Oomuro-ke</i> duology.<br><br>\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt14759062",
@@ -58,7 +58,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt14759062"
       },
-      "description": "Genres: Action, Drama, Mecha, Romance, Sci-Fi\nTags:Real Robot/Conspiracy/Ensemble Cast/Military/Heterosexual/Space Opera/Space/CGI/Class Struggle/Politics/Clone/Love Triangle\nA new Gundam SEED Movie announced as part of the project \"Mobile Suit Gundam SEED PROJECT Ignited\" in celebration of Gundam SEED's upcoming 20th anniversary in 2022.\n<br><br>\nIt is now Cosmic Era (C.E.) 75, two years after the dismantlement of the Destiny Plan, but warfare still continues to rage on between Naturals and Coordinators.\nIndependence movements are now sprouting up across Earth, and invasions by Blue Cosmos grow exponentially stronger...\nTo deal with these predicaments, a World Peace Supervision Organization known as COMPASS has been established, with PLANT Chairwoman Lacus Clyne as the founding leader.\nKira Yamato and the others, as its new members, intervene into various battles for the sake of this peace.\nHowever, as these battles take place, an emergent nation known as 'FOUNDATION' appears, and they propose a joint operation to attack the Blue Cosmos Headquarters.\n\nWill Destiny run its course, or will Kira still have the Freedom to resist against impossible odds?"
+      "description": "Genres: Action, Drama, Mecha, Romance, Sci-Fi\nTags:Real Robot/Conspiracy/Ensemble Cast/Military/Heterosexual/Space Opera/Space/CGI/Class Struggle/Politics/Love Triangle/Clone\nA new Gundam SEED Movie announced as part of the project \"Mobile Suit Gundam SEED PROJECT Ignited\" in celebration of Gundam SEED's upcoming 20th anniversary in 2022.\n<br><br>\nIt is now Cosmic Era (C.E.) 75, two years after the dismantlement of the Destiny Plan, but warfare still continues to rage on between Naturals and Coordinators.\nIndependence movements are now sprouting up across Earth, and invasions by Blue Cosmos grow exponentially stronger...\nTo deal with these predicaments, a World Peace Supervision Organization known as COMPASS has been established, with PLANT Chairwoman Lacus Clyne as the founding leader.\nKira Yamato and the others, as its new members, intervene into various battles for the sake of this peace.\nHowever, as these battles take place, an emergent nation known as 'FOUNDATION' appears, and they propose a joint operation to attack the Blue Cosmos Headquarters.\n\nWill Destiny run its course, or will Kira still have the Freedom to resist against impossible odds?"
     },
     {
       "id": "tt29666664",
@@ -68,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt29666664"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Cyborg/Full CGI/Yakuza/Vampire/Anti-Hero\nAfter human experimentation turns Kisaragi into a cyborg, he finds himself pursued by multiple organizations: An undying coven of vampires bent on the conquest of Tokyo, and an immortal order of Knights, and a group of Yakuza, sworn to avenge the killing of their leader.<br><br>\n<i>\"I might not have any reason to live, but that's no reason to let them kill me.\"</i><br><br>\nKisaragi will have to use his cyborg-body and his unique \"blood\", as well as anything else he can to make his big escape!!!<br><br>\n(Source: Polygon Pictures)"
+      "description": "Genres: Action, Drama, Supernatural\nTags:Full CGI/Cyborg/Anti-Hero/Vampire/Yakuza\nAfter human experimentation turns Kisaragi into a cyborg, he finds himself pursued by multiple organizations: An undying coven of vampires bent on the conquest of Tokyo, and an immortal order of Knights, and a group of Yakuza, sworn to avenge the killing of their leader.<br><br>\n<i>\"I might not have any reason to live, but that's no reason to let them kill me.\"</i><br><br>\nKisaragi will have to use his cyborg-body and his unique \"blood\", as well as anything else he can to make his big escape!!!<br><br>\n(Source: Polygon Pictures)"
     },
     {
       "id": "tt31152166",
@@ -88,7 +88,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt29402528"
       },
-      "description": "Genres: Adventure, Comedy, Music, Sci-Fi\nTags:Kids/Classical Music/Primarily Child Cast\nMusic exists in our daily lives for granted. But what would happen if music disappeared from the earth? This is a completely original story about Doraemon and his friends who are trying to save the earth from a crisis with the familiar theme of music! <br><br>\n\n(Source: Crunchyroll News)"
+      "description": "Genres: Adventure, Comedy, Music, Sci-Fi\nTags:Kids/Primarily Child Cast/Classical Music\nMusic exists in our daily lives for granted. But what would happen if music disappeared from the earth? This is a completely original story about Doraemon and his friends who are trying to save the earth from a crisis with the familiar theme of music! <br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt30971662",
