Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,17 +18,17 @@
       "behaviorHints": {
         "defaultVideoId": "tt28813303"
       },
-      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Seinen/Female Protagonist/Urban/Politics/Military/Coming of Age/Philosophy/Dystopian/Aliens/Primarily Female Cast/Language Barrier/Surreal Comedy/School\nThe first film of the <i>Dead Dead Demon's Dededededestruction</i> duology.\n<br><br>\nThe Japan Self-Defense Forces are still looking for a way to combat the alien threat, but so far conventional weapons have had no effect. Maybe it’s time to try something unconventional.<br>\n<br>\nMeanwhile, Kadode Koyama and her best friend avidly track the aliens’ movements on social media and less enthusiastically study for college entrance exams. When the end of the world looms overhead, you learn to take things one step at a time.<br>\n<br>\n(Source: Viz Media)"
+      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Seinen/Female Protagonist/Urban/Politics/Military/Coming of Age/Dystopian/Philosophy/Aliens/Primarily Female Cast/Language Barrier/Surreal Comedy/School\nThe first film of the <i>Dead Dead Demon's Dededededestruction</i> duology.\n<br><br>\nThe Japan Self-Defense Forces are still looking for a way to combat the alien threat, but so far conventional weapons have had no effect. Maybe it’s time to try something unconventional.<br>\n<br>\nMeanwhile, Kadode Koyama and her best friend avidly track the aliens’ movements on social media and less enthusiastically study for college entrance exams. When the end of the world looms overhead, you learn to take things one step at a time.<br>\n<br>\n(Source: Viz Media)"
     },
     {
       "id": "tt31257225",
       "type": "movie",
-      "name": "Given: Hiiragi mix",
+      "name": "given The Movie: Hiiragi Mix",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162987-gRFCJagC9bm2.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt31257225"
       },
-      "description": "Genres: Drama, Music, Romance\nTags:Boys' Love/Male Protagonist/Primarily Male Cast/LGBTQ+ Themes/Band/Primarily Teen Cast/Urban/Rock Music/Kuudere\nSequel to the first <i>Given Movie</i>.<br>\n<br>\nAfter Ritsuka Uenoyama hears Mafuyu Sato sing, he invites Mafuyu to join his band. Given auditions for a festival in Shibuya and falls short, though they continue to attract attention. At the same time, Mafuyu’s childhood friends, Shizusumi Yagi and Hiiragi Kashima, prepare to make their debut as the band “syh.” When they lose a guitarist, Hiiragi asks Ritsuka to join them for their big show.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Music, Romance\nTags:Boys' Love/Male Protagonist/Primarily Male Cast/LGBTQ+ Themes/Band/Urban/Primarily Teen Cast/Rock Music/Kuudere\nSequel to the first <i>Given Movie</i>.<br>\n<br>\nAfter Ritsuka Uenoyama hears Mafuyu Sato sing, he invites Mafuyu to join his band. Given auditions for a festival in Shibuya and falls short, though they continue to attract attention. At the same time, Mafuyu’s childhood friends, Shizusumi Yagi and Hiiragi Kashima, prepare to make their debut as the band “syh.” When they lose a guitarist, Hiiragi asks Ritsuka to join them for their big show.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32235713",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32235713"
       },
-      "description": "Genres: Comedy, Drama, Music, Supernatural\nTags:Hip-hop Music/Bar/Idol/Urban/Found Family/Primarily Adult Cast/Work/Seinen/Female Protagonist/Male Protagonist\nCompilation film of <i>Ya Boy Kongming!</i> The film features new footage in some of Eiko's performances.<br><br>\nThe music industry becomes a battlefield when ancient strategist Kongming is transported from historical China to modern Japan. He’ll use military tactics to turn his new friend Eiko into a music star, and together they’ll take the party hotspot of Shibuya by storm! The story is a clever take (and smart twist) on fish-out-of-water and person-out-of-time themes with out-of-this-world results for <i>Ya Boy Kongming!</i><br><br>\n\n(Source: HIDIVE) "
+      "description": "Genres: Comedy, Drama, Music, Supernatural\nTags:Hip-hop Music/Bar/Idol/Urban/Work/Seinen/Female Protagonist/Male Protagonist/Primarily Adult Cast/Found Family\nCompilation film of <i>Ya Boy Kongming!</i> The film features new footage in some of Eiko's performances.<br><br>\nThe music industry becomes a battlefield when ancient strategist Kongming is transported from historical China to modern Japan. He’ll use military tactics to turn his new friend Eiko into a music star, and together they’ll take the party hotspot of Shibuya by storm! The story is a clever take (and smart twist) on fish-out-of-water and person-out-of-time themes with out-of-this-world results for <i>Ya Boy Kongming!</i><br><br>\n\n(Source: HIDIVE) "
     },
     {
       "id": "kitsu:47834",
@@ -48,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "kitsu:47834"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Primarily Female Cast/Female Protagonist/School/Family Life/Cute Girls Doing Cute Things/Yuri/Urban/Slapstick/Tsundere/Primarily Teen Cast/Episodic/Primarily Child Cast/LGBTQ+ Themes\nA spin-off of the <i>Yuru Yuri</i> series featuring Sakurako and her sisters. The first film of the <i>Oomuro-ke</i> duology.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Primarily Female Cast/Female Protagonist/School/Family Life/Cute Girls Doing Cute Things/Yuri/Urban/Primarily Teen Cast/Slapstick/Episodic/Tsundere/Primarily Child Cast/LGBTQ+ Themes\nA spin-off of the <i>Yuru Yuri</i> series featuring Sakurako and her sisters. The first film of the <i>Oomuro-ke</i> duology.<br><br>\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt14759062",
@@ -88,7 +88,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt29402528"
       },
-      "description": "Genres: Adventure, Comedy, Music, Sci-Fi\nTags:Kids/Primarily Child Cast/Classical Music\nMusic exists in our daily lives for granted. But what would happen if music disappeared from the earth? This is a completely original story about Doraemon and his friends who are trying to save the earth from a crisis with the familiar theme of music! <br><br>\n\n(Source: Crunchyroll News)"
+      "description": "Genres: Adventure, Comedy, Music, Sci-Fi\nTags:Kids/Classical Music/Primarily Child Cast\nMusic exists in our daily lives for granted. But what would happen if music disappeared from the earth? This is a completely original story about Doraemon and his friends who are trying to save the earth from a crisis with the familiar theme of music! <br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt30971662",
