--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,124 +1,94 @@
 {
   "metas": [
     {
-      "id": "tt3398540",
+      "id": "kitsu:49102",
       "type": "movie",
-      "name": "HAIKYU!! The Dumpster Battle",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153658-KVnjW77cQw3y.jpg",
+      "name": "Kaijuu 8-gou Movie",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179998-hbLOxbjh6ev5.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt3398540"
+        "defaultVideoId": "kitsu:49102"
       },
-      "description": "Genres: Comedy, Drama, Sports\nTags:Volleyball/Shounen/School Club/Ensemble Cast/Male Protagonist/Primarily Male Cast/Coming of Age/POV/Primarily Teen Cast\nTheatrical follow-up to <i>Haikyuu!! TO THE TOP 2</i>. The first film of Haikyuu!! FINAL.<br><br>\n\nThe Spring Nationals tournament continues on, with Karasuno High matched against rivals Nekoma High, the fated battle between cats versus crows, also known as the highly anticipated “Dumpster Battle”. This match is the long awaited ultimate showdown between two opposing underdog teams.<br><br>\n(Source: Crunchyroll, edited)"
+      "description": "Genres: Action, Sci-Fi\nTags:Tokusatsu/Shounen/Kaiju/Urban Fantasy\nCompilation movie of <i>Kaijuu 8-gou</i>."
     },
     {
-      "id": "tt28813303",
+      "id": "tt33290314",
       "type": "movie",
-      "name": "Dead Dead Demon's Dededededestruction Zenshou",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx146609-Fy5EYCtLqMr2.jpg",
+      "name": "MAKE A GIRL",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx154064-qYnRF4BQsuM6.png",
       "behaviorHints": {
-        "defaultVideoId": "tt28813303"
+        "defaultVideoId": "tt33290314"
       },
-      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Seinen/Female Protagonist/Urban/Politics/Military/Coming of Age/Dystopian/Philosophy/Aliens/Primarily Female Cast/Language Barrier/Surreal Comedy/School\nThe first film of the <i>Dead Dead Demon's Dededededestruction</i> duology.\n<br><br>\nThe Japan Self-Defense Forces are still looking for a way to combat the alien threat, but so far conventional weapons have had no effect. Maybe it’s time to try something unconventional.<br>\n<br>\nMeanwhile, Kadode Koyama and her best friend avidly track the aliens’ movements on social media and less enthusiastically study for college entrance exams. When the end of the world looms overhead, you learn to take things one step at a time.<br>\n<br>\n(Source: Viz Media)"
+      "description": "Genres: Romance\nTags:Full CGI\nThe story is centered around the main character, Akira, and his scientifically created girlfriend, No. 0.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt31257225",
+      "id": "tt33050528",
       "type": "movie",
-      "name": "given The Movie: Hiiragi Mix",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162987-gRFCJagC9bm2.jpg",
+      "name": "COLORFUL STAGE! The Movie: A Miku Who Can't Sing",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179878-9rF40FPWqpgY.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt31257225"
+        "defaultVideoId": "tt33050528"
       },
-      "description": "Genres: Drama, Music, Romance\nTags:Boys' Love/Male Protagonist/Primarily Male Cast/LGBTQ+ Themes/Band/Urban/Primarily Teen Cast/Rock Music/Kuudere\nSequel to the first <i>Given Movie</i>.<br>\n<br>\nAfter Ritsuka Uenoyama hears Mafuyu Sato sing, he invites Mafuyu to join his band. Given auditions for a festival in Shibuya and falls short, though they continue to attract attention. At the same time, Mafuyu’s childhood friends, Shizusumi Yagi and Hiiragi Kashima, prepare to make their debut as the band “syh.” When they lose a guitarist, Hiiragi asks Ritsuka to join them for their big show.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Music\nTags:Band/Artificial Intelligence/Urban Fantasy/Idol/Primarily Female Cast/Primarily Teen Cast/Urban/Female Protagonist/Virtual World\nSet in modern day Shibuya, Ichika Hoshino, a high school girl and street musician, encounters an unknown version of Hatsune Miku after hearing a Miku song that she'd never heard before in a CD store. Ichika learns that this version of Miku is having trouble reaching people with her songs, so together they team up to try to touch the hearts of their audience through music.<br><br>\n\n(Source: Crunchyroll News, edited)"
     },
     {
-      "id": "tt32235713",
+      "id": "tt33507588",
       "type": "movie",
-      "name": "Ya Boy Kongming! Road to Summer Sonia",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171026-vGW0uvrXjrxn.jpg",
+      "name": "Senpai wa Otokonoko: Ame Nochi Hare",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182158-ztLTD2FKPnrd.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt32235713"
+        "defaultVideoId": "tt33507588"
       },
-      "description": "Genres: Comedy, Drama, Music, Supernatural\nTags:Hip-hop Music/Bar/Idol/Urban/Work/Seinen/Female Protagonist/Male Protagonist/Primarily Adult Cast/Found Family\nCompilation film of <i>Ya Boy Kongming!</i> The film features new footage in some of Eiko's performances.<br><br>\nThe music industry becomes a battlefield when ancient strategist Kongming is transported from historical China to modern Japan. He’ll use military tactics to turn his new friend Eiko into a music star, and together they’ll take the party hotspot of Shibuya by storm! The story is a clever take (and smart twist) on fish-out-of-water and person-out-of-time themes with out-of-this-world results for <i>Ya Boy Kongming!</i><br><br>\n\n(Source: HIDIVE) "
+      "description": "Genres: Comedy, Drama, Romance\nTags:LGBTQ+ Themes/Agender/Crossdressing/Primarily Teen Cast\nTheatrical follow-up to the TV anime <i>Senpai wa Otokonoko</i>."
     },
     {
-      "id": "kitsu:47834",
+      "id": "tt35109348",
       "type": "movie",
-      "name": "Oomuro-ke: dear sisters",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167984-vZELUFDNk0Ax.jpg",
+      "name": "Aldnoah.Zero (Re+)",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185714-ALbL559oK2Q3.png",
       "behaviorHints": {
-        "defaultVideoId": "kitsu:47834"
+        "defaultVideoId": "tt35109348"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Primarily Female Cast/Female Protagonist/School/Family Life/Cute Girls Doing Cute Things/Yuri/Urban/Primarily Teen Cast/Slapstick/Episodic/Tsundere/Primarily Child Cast/LGBTQ+ Themes\nA spin-off of the <i>Yuru Yuri</i> series featuring Sakurako and her sisters. The first film of the <i>Oomuro-ke</i> duology.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Super Robot\nA movie compilation of the first and second cours of <i>Aldnoah.Zero</i> and also includes the new animation to conclude the series, <i>Aldnoah.Zero: Ame no Danshou</i>."
     },
     {
-      "id": "tt14759062",
+      "id": "tt34602994",
       "type": "movie",
-      "name": "Mobile Suit Gundam SEED FREEDOM",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx134761-UCVG3V6t6gJq.jpg",
+      "name": "Binan Koukou Chikyuu Bouei-bu ETERNAL LOVE!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179838-qCOaqbhZ8eFX.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt14759062"
+        "defaultVideoId": "tt34602994"
       },
-      "description": "Genres: Action, Drama, Mecha, Romance, Sci-Fi\nTags:Real Robot/Conspiracy/Ensemble Cast/Military/Heterosexual/Space Opera/Space/CGI/Class Struggle/Politics/Love Triangle/Clone\nA new Gundam SEED Movie announced as part of the project \"Mobile Suit Gundam SEED PROJECT Ignited\" in celebration of Gundam SEED's upcoming 20th anniversary in 2022.\n<br><br>\nIt is now Cosmic Era (C.E.) 75, two years after the dismantlement of the Destiny Plan, but warfare still continues to rage on between Naturals and Coordinators.\nIndependence movements are now sprouting up across Earth, and invasions by Blue Cosmos grow exponentially stronger...\nTo deal with these predicaments, a World Peace Supervision Organization known as COMPASS has been established, with PLANT Chairwoman Lacus Clyne as the founding leader.\nKira Yamato and the others, as its new members, intervene into various battles for the sake of this peace.\nHowever, as these battles take place, an emergent nation known as 'FOUNDATION' appears, and they propose a joint operation to attack the Blue Cosmos Headquarters.\n\nWill Destiny run its course, or will Kira still have the Freedom to resist against impossible odds?"
+      "description": "Genres: Comedy, Mahou Shoujo, Sci-Fi, Slice of Life\nTags:\nA new film announced for the 10th anniversary of <i>Binan Koukou Chikyuu Bouei-bu</i>. <br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced. </i>"
     },
     {
-      "id": "tt29666664",
+      "id": "tt33512868",
       "type": "movie",
-      "name": "BLOODY ESCAPE",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx144770-t4BpclqKxnzM.jpg",
+      "name": "Doraemon: Nobita no e Sekai Monogatari",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182333-t7cPjoPHHPBp.png",
       "behaviorHints": {
-        "defaultVideoId": "tt29666664"
+        "defaultVideoId": "tt33512868"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Full CGI/Cyborg/Anti-Hero/Vampire/Yakuza\nAfter human experimentation turns Kisaragi into a cyborg, he finds himself pursued by multiple organizations: An undying coven of vampires bent on the conquest of Tokyo, and an immortal order of Knights, and a group of Yakuza, sworn to avenge the killing of their leader.<br><br>\n<i>\"I might not have any reason to live, but that's no reason to let them kill me.\"</i><br><br>\nKisaragi will have to use his cyborg-body and his unique \"blood\", as well as anything else he can to make his big escape!!!<br><br>\n(Source: Polygon Pictures)"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Kids\nDoraemon, Nobita, and friends enter a painting into a medieval European world. In the painting, they meet Claire and Milo, children from the country of Artoria. They also encounter a small demon with wings named Chai. Together, they face a powerful enemy for a legendary jewel.\n<br><br>\n(Source: Anime News Network)"
     },
     {
-      "id": "tt31152166",
+      "id": "tt31957398",
       "type": "movie",
-      "name": "KIZUMONOGATARI -Koyomi Vamp-",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181970-dqNqPsJcBk5I.jpg",
+      "name": "Thunderbolt Fantasy: Touriken Yuuki - Saishuushou",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176432-jqq2IZrjYaiZ.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt31152166"
+        "defaultVideoId": "tt31957398"
       },
-      "description": "Genres: Action, Drama, Horror, Mystery, Supernatural\nTags:Vampire\nCompilation film of the three <i>Kizumonogatari</i> movies.<br><br>\n\nSpring break, an interval of time between the second and third year of high school. It was one fateful evening when Koyomi Araragi encounters her.<br><br>\n\nKiss-shot Acerola-orion Heart-under-blade.<br>\nLegendary Vampire. Killer of Apparitions. King of Apparitions.<br><br>\n\nHer legs and arms were cruelly torn apart, her extravagant dress soaked in red; she's a monster who finds herself in a tragic state, laying in a pool of her own blood. However, Koyomi finds her to be beautiful this way. <br><br>\n\nOn the brink of death after losing her four limbs, she asks Koyomi to save her. After experiencing fear, chaos, and finally conflict, Koyomi gives his own blood in order to save her.\nBut when he awakens, he finds himself re-born as her vampire kin.<br><br>\n\nKoyomi wishes to revert to being a human from a vampire. However, he must take back all of Kiss-shot's limbs to do so. Working as a negotiator, Meme Oshino stands in middle ground as Koyomi attempts to recapture her four limbs by challenging three powerful vampire hunters.<br><br>\n\nThis hellish spring break, the final one of his high school life, is only just beginning.<br><br>\n\n(Source: KIZUMONOGATARI -Koyomi Vamp- Official USA Website, edited)"
-    },
-    {
-      "id": "tt29402528",
-      "type": "movie",
-      "name": "Doraemon: Nobita no Chikyuu Symphony",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166976-oq43bwzCtPZO.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt29402528"
-      },
-      "description": "Genres: Adventure, Comedy, Music, Sci-Fi\nTags:Kids/Classical Music/Primarily Child Cast\nMusic exists in our daily lives for granted. But what would happen if music disappeared from the earth? This is a completely original story about Doraemon and his friends who are trying to save the earth from a crisis with the familiar theme of music! <br><br>\n\n(Source: Crunchyroll News)"
-    },
-    {
-      "id": "tt30971662",
-      "type": "movie",
-      "name": "Detective Conan vs. Kid the Phantom Thief",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184369-vJd1ox7UogTI.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt30971662"
-      },
-      "description": "Genres: Action, Adventure, Mystery\nTags:\nThe movie contains cuts from episodes featuring the confrontations between Conan and Kid the Phantom Thief: “Conan vs. Kid the Phantom Thief” and “The Detectives Come Together! Kudo vs. Kid the Phantom Thief”. From birth of the Moonlight Magician, Kid the Phantom Thief, and the first encounter between the greatest and eternal rival Conan / Shinichi, this is a special compilation film of TV series with new footage!"
+      "description": "Genres: Action, Drama, Fantasy\nTags:Puppetry\nTheatrical follow-up to <i>Thunderbolt Fantasy: Touriken Yuuki 4</i>."
     },
     {
       "id": "tt34348665",
       "type": "movie",
-      "name": "Oshiri Tantei: Saraba Itoshiki Oshiri yo",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172016-vQMRmP6YozQi.png",
+      "name": "Oshiri Tantei: Star and Moon",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185643-2NbMhFMCtXOe.png",
       "behaviorHints": {
         "defaultVideoId": "tt34348665"
       },
-      "description": "Genres: Comedy, Mystery\nTags:\nWill Oshiri Tantei be able to solve the biggest mystery in history??"
-    },
-    {
-      "id": "tt31392425",
-      "type": "movie",
-      "name": "Shimajirou Miracle-jima no Nanairo Carnation",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172976-aVwpVKzEDr6G.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt31392425"
-      },
-      "description": "Genres: Comedy, Fantasy\nTags:\nnull"
+      "description": "Genres: Comedy, Mystery\nTags:\nStory begins when Koala asks Butt Detective to find a missing relative who disappeared from an idol contest. The case takes Butt Detective to Stardust Island, the site of the contest, and also the home of the international criminal organization Phantom Thief Academy, headed by Phantom Thief G. Here, the organization advances its secret conspiracy, codenamed the Dark Age Plan. Butt Detective enters Stardust Island under the guise of an idol. At the same time, he joins forces with Phantom Thief U, who is out to steal back the valuable Moonlight Stone from Phantom Thief G. The story will also reveal more about Brown's past.\n<br><br>\n(Source: Anime News Network, edited)\n"
     }
   ]
 }
