Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt33290314"
       },
-      "description": "Genres: Romance\nTags:Full CGI\nThe story is centered around the main character, Akira, and his scientifically created girlfriend, No. 0.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Romance\nTags:Full CGI/Heterosexual\nThe story is centered around the main character, Akira, and his scientifically created girlfriend, No. 0.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33050528",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt33507588"
       },
-      "description": "Genres: Comedy, Drama, Romance\nTags:LGBTQ+ Themes/Agender/Crossdressing/Primarily Teen Cast\nTheatrical follow-up to the TV anime <i>Senpai wa Otokonoko</i>."
+      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/Agender/LGBTQ+ Themes/Primarily Teen Cast\nTheatrical follow-up to the TV anime <i>Senpai wa Otokonoko</i>."
     },
     {
       "id": "tt35109348",
