--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -110,7 +110,7 @@
       "type": "series",
       "name": "Beheneko: The Elf-Girl's Cat is Secretly an S-Ranked Monster!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176158-l0Ic9bAD6xJz.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Elf/Magic/Animals/Dungeon/Swordplay/Nudity/Monster Girl/Seinen/Kemonomimi\nNobody asked to be a cat!\n<br><br>\nAfter dying in a fight against the forces of evil, a knight is shocked to discover that instead of being reborn as a hero of humanity, he starts his new life as a behemoth-one of the most powerful monsters in the world! The only problem is that a baby behemoth looks an awful lot like...an adorable house cat?! Things grow even more confusing when a beautiful elf adventurer rescues him from the brink of death rather than finishing him off. This house-cat-slash-knight's baffling journey is just getting started...\n<br><br>\n(Source: Yen Press)"
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Elf/Magic/Animals/Dungeon/Monster Girl/Nudity/Swordplay/Seinen/Kemonomimi\nNobody asked to be a cat!\n<br><br>\nAfter dying in a fight against the forces of evil, a knight is shocked to discover that instead of being reborn as a hero of humanity, he starts his new life as a behemoth-one of the most powerful monsters in the world! The only problem is that a baby behemoth looks an awful lot like...an adorable house cat?! Things grow even more confusing when a beautiful elf adventurer rescues him from the brink of death rather than finishing him off. This house-cat-slash-knight's baffling journey is just getting started...\n<br><br>\n(Source: Yen Press)"
     },
     {
       "id": "tt24326724",
@@ -131,7 +131,7 @@
       "type": "series",
       "name": "Possibly the Greatest Alchemist of All Time",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177506-in4J0GNzjOZL.jpg",
-      "description": "Genres: Adventure, Fantasy\nTags:Alchemy/Isekai\nNot even a hero, Takumi Iruma gets accidentally mixed in with a group of heroes chosen to be summoned to another world. As compensation for the mix-up, a goddess offers him the right to choose any skill he wishes for! Hoping for a peaceful and quiet life that has nothing to do with fighting or going into battle, he chooses a seemingly boring creation skill. However, it turns out \"alchemy\" is the most powerful skill that allows him to create everything from a holy sword to flying ships! This cheat skill he unexpectedly acquired turns him into a wealthy merchant and makes him undefeatable in battles! A heartwarming adventure story about (possibly) the most powerful alchemist in another world!<br>\n<br>\n(Source: AlphaPolis)"
+      "description": "Genres: Adventure, Fantasy\nTags:Isekai/Alchemy\nNot even a hero, Takumi Iruma gets accidentally mixed in with a group of heroes chosen to be summoned to another world. As compensation for the mix-up, a goddess offers him the right to choose any skill he wishes for! Hoping for a peaceful and quiet life that has nothing to do with fighting or going into battle, he chooses a seemingly boring creation skill. However, it turns out \"alchemy\" is the most powerful skill that allows him to create everything from a holy sword to flying ships! This cheat skill he unexpectedly acquired turns him into a wealthy merchant and makes him undefeatable in battles! A heartwarming adventure story about (possibly) the most powerful alchemist in another world!<br>\n<br>\n(Source: AlphaPolis)"
     },
     {
       "id": "tt32801156",
@@ -155,13 +155,6 @@
       "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Seinen/Coastal/School/Love Triangle\nI, Teruaki Nakamura, transferred to a school in Okinawa and developed a crush on a girl named Kiyan-san, but I don't understand her dialect. Higa-san is always helping me by translating the dialect. A slightly different cultural love starts on the southern island."
     },
     {
-      "id": "tt33310730",
-      "type": "series",
-      "name": "Medalist",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165171-nTOHsbh3pThN.jpg",
-      "description": "Genres: Drama, Psychological, Sports\nTags:Ice Skating/Seinen/Work/Athletics/Rehabilitation/CGI/Musical Theater\nTsukasa, whose dreams were crushed. Inori, left to fend for herself. These two share a dream...and their tenacity may be the only thing that sees them through. Their destination? The ice...on the world's stage! <br>\n<br>\n(Source: Kodansha USA) "
-    },
-    {
       "id": "tt32034812",
       "type": "series",
       "name": "I’m Living with an Otaku NEET Kunoichi!?",
@@ -176,11 +169,18 @@
       "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:\nEin has been saddled with the job of \"Appraiser,\" the weakest and least fortunate of all the jobs one can be born with, as the only power it grants is the ability to appraise things.\n\nTreated cruelly by all and reduced to a litter collector by his peers, Ein has grown to hate himself and lives his days in spineless self-abasement. But when he meets Yuuri, the spirit of the World Tree, and her protector, Ursula the sage, Ein's fate takes a drastic turn.<br>\n<br>\nWith the gift of a Spirit Eye from Yuuri and the help of Ursula in learning how to use it, Ein grows stronger and stronger, until he's ready to take Yuuri on her long-desired journey to meet her World Tree's sisters. He goes on to overcome all sorts of challenges, armed with his natural kindness and his new-found courage. <br><br> (Source: Crunchyroll)"
     },
     {
-      "id": "tt33058180",
+      "id": "tt33310730",
       "type": "series",
-      "name": "From Bureaucrat to Villainess: Dad's Been Reincarnated!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172453-7iYNTAEZpNsJ.png",
-      "description": "Genres: Comedy, Fantasy\nTags:Villainess/Gender Bending/Seinen/Isekai\nAfter a traffic accident, 52-year-old civil servant Kenzaburou Tondabayashi awakens to find he's become Grace Auvergne, a duke's daughter, and more importantly the villainess of an otome game. Not wanting to get in the way of the happy endings of the young characters around him, Grace sets out to play the role of the villain, but whether it's due to Kenzaburou's memories of being an affectionate parent getting in the way or not being able to remember those pesky foreign names properly, it ends up being a lot harder than it looks... "
+      "name": "Medalist",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165171-nTOHsbh3pThN.jpg",
+      "description": "Genres: Drama, Psychological, Sports\nTags:Ice Skating/Seinen/Work/Athletics/Rehabilitation/CGI/Musical Theater\nTsukasa, whose dreams were crushed. Inori, left to fend for herself. These two share a dream...and their tenacity may be the only thing that sees them through. Their destination? The ice...on the world's stage! <br>\n<br>\n(Source: Kodansha USA) "
+    },
+    {
+      "id": "tt32579866",
+      "type": "series",
+      "name": "Bogus Skill <<Fruitmaster>> ~About that time I became able to eat unlimited numbers of Skill Fruits (that kill you)~",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178100-GF4dKSrkdByJ.jpg",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Adoption/Swordplay/Agriculture\nIn a world where eating “Skill Fruits” grants special powers, Light, a boy who seeks to become the world’s greatest adventurer, obtains the <<Fruitmaster>> skill, a bogus skill specializing in fruit cultivation that is completely useless in combat.<br>\n<br>\nEating a second “Skill Fruit” results in death, so there are no do-overs. Meanwhile, his childhood friend Rena, who promised to become an adventurer with him, achieves S Rank in record time, and the gap between them widens.<br>\n<br>\nLight spends his days farming and training with a sword, but one day, he accidentally eats a second “Skill Fruit.”<br>\n<br>\n“Why am I not dying?!”<br>\n<br>\nLight avoids certain death and learns the incredible true power of the <<Fruitmaster>> skill: he can eat as many “Skill Fruits” as he wants! His overpowered ability allows him to gain an ability every time he eats one, for an unlimited number of times!! The worst skill ever is actually the best skill ever!!!<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and Cunrchyroll. The original TV broadcast started on January 7, 2025.</i>"
     },
     {
       "id": "tt33615810",
@@ -190,11 +190,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Female Harem/Dungeon/Magic/Male Protagonist\nYuke, a red mage, angrily declares that he's leaving Thunder Pike, the A-rank party he's been with for five years, because he's fed up with being insulted and ridiculed by the other members.<br>\n<br>\nWhile searching for a new party, he runs into his former students Marina, Silk, and Rain, and decides to join their party, Clover. Encouraged by their admiration of him as their teacher, Yuke leads them in completing several quests that show off his own extraordinary magic and skills while bringing out the girls' abilities to their fullest.<br>\n<br>\nThen, through an \"adventure broadcast\" by an artifact known as Camelot, Clover becomes well-known throughout society. The party's dream is to conquer Achromatic Darkness, the most challenging dungeon of all, but as they take on other dungeons in hopes of eventually achieving that goal, they gradually become entangled in chaos that threatens the whole world...\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt33058180",
+      "type": "series",
+      "name": "From Bureaucrat to Villainess: Dad's Been Reincarnated!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172453-7iYNTAEZpNsJ.png",
+      "description": "Genres: Comedy, Fantasy\nTags:Villainess/Gender Bending/Seinen/Isekai\nAfter a traffic accident, 52-year-old civil servant Kenzaburou Tondabayashi awakens to find he's become Grace Auvergne, a duke's daughter, and more importantly the villainess of an otome game. Not wanting to get in the way of the happy endings of the young characters around him, Grace sets out to play the role of the villain, but whether it's due to Kenzaburou's memories of being an affectionate parent getting in the way or not being able to remember those pesky foreign names properly, it ends up being a lot harder than it looks... "
+    },
+    {
       "id": "tt33384314",
       "type": "series",
       "name": "Ameku M.D.: Doctor Detective",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176642-lgDtPlodCMRm.jpg",
-      "description": "Genres: Mystery, Slice of Life\nTags:Female Protagonist/Medicine/Detective\nTen’ikai General Hospital’s Supervisory Department of Diagnostic Pathology handles cases other physicians deem too difficult to treat. It’s also where bizarre mysteries surface, from unexplained illnesses to strange murders even the police can’t solve. At the center of it all is Takao Ameku, a brilliant doctor determined to reveal the shocking truth behind these anomalies.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Mystery, Slice of Life\nTags:Female Protagonist/Medicine/Detective/Police\nTen’ikai General Hospital’s Supervisory Department of Diagnostic Pathology handles cases other physicians deem too difficult to treat. It’s also where bizarre mysteries surface, from unexplained illnesses to strange murders even the police can’t solve. At the center of it all is Takao Ameku, a brilliant doctor determined to reveal the shocking truth behind these anomalies.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33503859",
@@ -208,7 +215,7 @@
       "type": "series",
       "name": "Headhunted to Another World: From Salaryman to Big Four!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179689-kmlqdU3IbxeM.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Economics/Isekai/Demons/Magic/Work/Politics/Male Protagonist/Elf\nThe four heavenly kings of the Demon King's army who reign over another world. The person chosen for the last seat was... Dennosuke Uchimura, a dull salaryman! Headhunted by the Demon King's army, Uchimura was offered a position at the executive level, but the Demon King's army's work is a series of tough missions that put his life on the line...?! Uchimura, who has no special skills, faces the challenges of this other world with the experience and wisdom of a salaryman! A story of changing jobs in another world for all working people!"
+      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Isekai/Economics/Demons/Magic/Work/Politics/Male Protagonist/Elf\nIn an alternate fantasy world, the Demon King reigns with a formidable army led by his Four Heavenly Kings. One happens to be Uchimura Denosuke, a normal salaryman unexpectedly plucked from his mundane life by the Demon King himself. But even in this new realm, Uchimura is bestowed no particular powers. Can he survive treacherous missions with only the knowledge of an office worker?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt26713948",
@@ -237,13 +244,6 @@
       "name": "Magic Maker: How to Make Magic in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179297-qaG8nCqMpR3o.jpg",
       "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Isekai/Magic\nOn the night of his 30th birthday, one man’s dreams of wielding magic come true after he unexpectedly passes away. He wakes as Sion, a young child in another world. He and his elder sister, Marie, are the children of a lower-class noble family who govern their region. After receiving conflicting messages from their father, Sion and Marie set out on an adventure to uncover the magic.<br>\n<br>\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt32579866",
-      "type": "series",
-      "name": "Bogus Skill <<Fruitmaster>> ~About that time I became able to eat unlimited numbers of Skill Fruits (that kill you)~",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178100-GF4dKSrkdByJ.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Adoption/Swordplay/Agriculture\nIn a world where eating “Skill Fruits” grants special powers, Light, a boy who seeks to become the world’s greatest adventurer, obtains the <<Fruitmaster>> skill, a bogus skill specializing in fruit cultivation that is completely useless in combat.<br>\n<br>\nEating a second “Skill Fruit” results in death, so there are no do-overs. Meanwhile, his childhood friend Rena, who promised to become an adventurer with him, achieves S Rank in record time, and the gap between them widens.<br>\n<br>\nLight spends his days farming and training with a sword, but one day, he accidentally eats a second “Skill Fruit.”<br>\n<br>\n“Why am I not dying?!”<br>\n<br>\nLight avoids certain death and learns the incredible true power of the <<Fruitmaster>> skill: he can eat as many “Skill Fruits” as he wants! His overpowered ability allows him to gain an ability every time he eats one, for an unlimited number of times!! The worst skill ever is actually the best skill ever!!!<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and Cunrchyroll. The original TV broadcast started on January 7, 2025.</i>"
     },
     {
       "id": "tt34621652",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "Tasokare Hotel",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178495-RJCGa2YRdKBU.jpg",
-      "description": "Genres: Mystery, Supernatural\nTags:Amnesia/Work\nThe <i>\"Tasokare Hotel\"</i> never sees afternoon, nor does it see night, but rather exists in a state of endless twilight.<br><br>\nThis hotel exists in a limbo state, as a place that allows souls who have not yet decided if they are meant to pass on to the afterlife, or remain in the world of the living, to rest their wings. The protagonist, Neko Tsukahara, comes across this \"Tasokare Hotel\" with no memory of who she is or how she came to be there. <br><br>\nAn employee leads the way and shows Neko to her room, explaining, \"In these rooms, there should be items that are related to our guests' memories. These items can also serve as clues to help our guests remember who they were before they arrived here.\" As Neko searches for a way to return to this world and remember who she was, a certain incident confronts her...<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
+      "description": "Genres: Mystery, Supernatural\nTags:Amnesia/Female Protagonist/Work\nThe <i>\"Tasokare Hotel\"</i> never sees afternoon, nor does it see night, but rather exists in a state of endless twilight.<br><br>\nThis hotel exists in a limbo state, as a place that allows souls who have not yet decided if they are meant to pass on to the afterlife, or remain in the world of the living, to rest their wings. The protagonist, Neko Tsukahara, comes across this \"Tasokare Hotel\" with no memory of who she is or how she came to be there. <br><br>\nAn employee leads the way and shows Neko to her room, explaining, \"In these rooms, there should be items that are related to our guests' memories. These items can also serve as clues to help our guests remember who they were before they arrived here.\" As Neko searches for a way to return to this world and remember who she was, a certain incident confronts her...<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
     },
     {
       "id": "tt34754131",
@@ -341,7 +341,7 @@
       "type": "series",
       "name": "AQUARION: Myth of Emotions",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162921-ByoCP2VvLjeT.jpg",
-      "description": "Genres: Action, Fantasy, Mecha\nTags:CGI\nEnoshima is a small island floating in the Shonan Sea. On its beautiful and tranquil beach is Private Enoshima Academy. The school gathers talented children from all over the country and provides them with a gifted education using the latest equipment. Sakko, Rimiya, and Toshi, who have been selected as students in the special reinforcement class \"Elements\", are ordered to pilot the \"Vector Machine\", a fighter plane powered by the power of emotion, and are forced to fight against the mysterious invasion weapon \"Mythical Beasts\". The boys and girls, burdened with their destinies, will come face to face with the truth of the universe as the mysterious organization Space Egg Society and the intentions of adults intersect.<br><br>\n\n(Source: Anime News Network, edited)"
+      "description": "Genres: Action, Fantasy, Mecha\nTags:CGI/Coastal\nEnoshima is a small island floating in the Shonan Sea. On its beautiful and tranquil beach is Private Enoshima Academy. The school gathers talented children from all over the country and provides them with a gifted education using the latest equipment. Sakko, Rimiya, and Toshi, who have been selected as students in the special reinforcement class \"Elements\", are ordered to pilot the \"Vector Machine\", a fighter plane powered by the power of emotion, and are forced to fight against the mysterious invasion weapon \"Mythical Beasts\". The boys and girls, burdened with their destinies, will come face to face with the truth of the universe as the mysterious organization Space Egg Society and the intentions of adults intersect.<br><br>\n\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt33614026",
