Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,12 +1,12 @@
 {
   "metas": [
     {
-      "id": "kitsu:49102",
+      "id": "tt33347496",
       "type": "movie",
       "name": "Kaijuu 8-gou Movie",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179998-hbLOxbjh6ev5.jpg",
       "behaviorHints": {
-        "defaultVideoId": "kitsu:49102"
+        "defaultVideoId": "tt33347496"
       },
       "description": "Genres: Action, Sci-Fi\nTags:Tokusatsu/Shounen/Kaiju/Urban Fantasy\nCompilation movie of <i>Kaijuu 8-gou</i>."
     },
