Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt33050528"
       },
-      "description": "Genres: Drama, Music\nTags:Band/Primarily Teen Cast/Artificial Intelligence/Urban Fantasy/Idol/Primarily Female Cast/Urban/Female Protagonist/Virtual World\nSet in modern day Shibuya, Ichika Hoshino, a high school girl and street musician, encounters an unknown version of Hatsune Miku after hearing a Miku song that she'd never heard before in a CD store. Ichika learns that this version of Miku is having trouble reaching people with her songs, so together they team up to try to touch the hearts of their audience through music.<br><br>\n\n(Source: Crunchyroll News, edited)"
+      "description": "Genres: Drama, Music\nTags:Band/Artificial Intelligence/Urban Fantasy/Idol/Primarily Female Cast/Primarily Teen Cast/Urban/Female Protagonist/Virtual World/Vocal synth\nSet in modern day Shibuya, Ichika Hoshino, a high school girl and street musician, encounters an unknown version of Hatsune Miku after hearing a Miku song that she'd never heard before in a CD store. Ichika learns that this version of Miku is having trouble reaching people with her songs, so together they team up to try to touch the hearts of their audience through music.<br><br>\n\n(Source: Crunchyroll News, edited)"
     },
     {
       "id": "tt21996220",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt21996220"
       },
-      "description": "Genres: Adventure, Drama, Romance\nTags:Historical/Shoujo/Foreign/Military/Ojou-sama\nMovie project commemorating the 50th anniversary of the <i>Versailles no Bara</i> manga's publication. <br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced.</i>"
+      "description": "Genres: Adventure, Drama, Romance\nTags:Historical/Foreign/Shoujo/Military/Ojou-sama\nMovie project commemorating the 50th anniversary of the <i>Versailles no Bara</i> manga's publication. <br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced.</i>"
     },
     {
       "id": "tt33507588",
